--- a/gleam.toml
+++ b/gleam.toml
@@ -14,8 +14,7 @@ target = "javascript"
 gleam_stdlib = "~> 0.32"
 gleam_javascript = "~> 0.7"
 lustre = "~> 3.1"
-# plinth = "~> 0.1"
-plinth = { path = "../plinth" }
+plinth = "~> 0.1"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
