--- a/gleam.toml
+++ b/gleam.toml
@@ -14,7 +14,8 @@ target = "javascript"
 gleam_stdlib = "~> 0.32"
 gleam_javascript = "~> 0.7"
 lustre = "~> 3.1"
-plinth = "~> 0.1"
+gleam_community_maths = ">= 1.1.0 and < 2.0.0"
+glector = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
